--- a/account/values.yaml
+++ b/account/values.yaml
@@ -104,7 +104,7 @@ global:
         targetPort: http
       - name: httpprivate
         port: 8081
-        targetPort: http
+        targetPort: httpprivate
 
 common:
   envVars:
