--- a/filex/values.yaml
+++ b/filex/values.yaml
@@ -92,7 +92,7 @@ global:
         targetPort: http
       - name: httpprivate
         port: 8081
-        targetPort: http
+        targetPort: httpprivate
 
 
 common:
