--- a/account/values.yaml
+++ b/account/values.yaml
@@ -1,4 +1,5 @@
 global:
+  cookie_domain: <change me>
   selfRegistrationEnabled: false
   throttle_login_delay: 5s
   init:
@@ -111,6 +112,8 @@ common:
       containerPort: 8081
 
   envVars:
+    - name: COOKIE_DOMAIN
+      value: {{ .Values.global.cookie_domain }}
     - name: APP_LOGGING_LEVEL
       value: "{{ .Values.global.logs.loglevel }}"
     - name: MONGO_HOST
