--- a/account/values.yaml
+++ b/account/values.yaml
@@ -113,7 +113,7 @@ common:
 
   envVars:
     - name: COOKIE_DOMAIN
-      value: {{ .Values.global.cookie_domain }}
+      value: "{{ .Values.global.cookie_domain }}"
     - name: APP_LOGGING_LEVEL
       value: "{{ .Values.global.logs.loglevel }}"
     - name: MONGO_HOST
