--- a/bidder/values.yaml
+++ b/bidder/values.yaml
@@ -96,13 +96,13 @@ global:
     requests:
       memory: 256Mi
       cpu: 300m
-  podSecurityContext:
-    enabled: true
-    fsGroup: 1001
-  containerSecurityContext:
-    enabled: true
-    runAsUser: 1001
-    runAsNonRoot: true
+#  podSecurityContext:
+#    enabled: true
+#    fsGroup: 1001
+#  containerSecurityContext:
+#    enabled: true
+#    runAsUser: 1001
+#    runAsNonRoot: true
 
 
   existingSecret: ""
