--- a/bidder/values.yaml
+++ b/bidder/values.yaml
@@ -38,6 +38,7 @@ global:
         <logger name="oap.application.remote" level="WARN"/>
         <logger name="javax.management" level="ERROR" />
         <logger name="net.rubyeye.xmemcached" level="WARN" />
+        <logger name=" com.google.code.yanf4j" level="WARN" />
       
         <root level="${APP_LOGGING_LEVEL:-DEBUG}">
             <appender-ref ref="STDOUT"/>
