--- a/common/templates/deployment.yaml
+++ b/common/templates/deployment.yaml
@@ -9,8 +9,8 @@ metadata:
     {{- if .Values.global.commonLabels }}
     {{- tpl ( .Values.global.commonLabels | toYaml ) $ | nindent 4 }}
     {{- end }}
-  {{- if or .Values.deployment.annotations .Values.global.deployment.annotations .Values.commonAnnotations .Values.global.commonAnnotations }}
-    {{ $annotations := merge (dict) .Values.deployment.annotations .Values.global.deployment.annotations .Values.commonAnnotations .Values.global.commonAnnotations }}
+  {{- if or .Values.pod.annotations .Values.global.pod.annotations .Values.commonAnnotations .Values.global.commonAnnotations }}
+    {{ $annotations := merge (dict) .Values.pod.annotations .Values.global.pod.annotations .Values.commonAnnotations .Values.global.commonAnnotations }}
   annotations:
     {{- tpl ( $annotations | toYaml ) $ | nindent 4 }}
   {{- end }}
