add: messages.persistence_directory

--- a/bidder/values.yaml
+++ b/bidder/values.yaml
@@ -1,4 +1,6 @@
 global:
+  messages:
+    persistence_directory: /opt/xenoss-bidder/messages
   hosts:
     memcached: "<change me>"
     missioncontrol: "<change me>"
@@ -128,6 +130,8 @@ common:
       value: "{{ .Values.global.hosts.memcached }}"
     - name: HTTP_MC_REMOTE
       value: "http://{{ .Values.global.hosts.missioncontrol }}:8081/remote/"
+    - name: MESSAGE_CLIENT_LOGGING_PERSISTENCE_DIRECTORY
+      value: "{{ .Values.global.messages.persistence_directory }}"
   configMaps:
     default:
       enabled: true
